# SemanticModel

./: CMakeLists.txt  README.md
documents/refmanual/: Makefile
documents/refmanual/source/: conf.py
src/smodel/: CMakeLists.txt  artefact.cpp  artefact.h  const.cpp  const.h  context.cpp  context.h  creator.cpp  creator.h  ilist.cpp  ilist.h  import.cpp  import.h  instruction.cpp  instruction.h  module.cpp  module.h  nametable.cpp  nametable.h  operand.cpp  operand.h  procedure.cpp  procedure.h  type.cpp  type.h  variable.cpp  variable.h
src/tests/: CMakeLists.txt  main.cpp  test1.cpp  testBaseScalarVar.cpp  testInstructions.cpp  testModule.cpp  tests.h
